--- a/lib/starter_project/ufo/settings.yml
+++ b/lib/starter_project/ufo/settings.yml
@@ -1,4 +1,7 @@
+# More info: http://ufoships.com/docs/ufo-settings/
 image: <%= @image %>
+# clean_keep: 30
+# ecr_keep: 30
 service_cluster:
   default: <%= @cluster %> # default cluster
   # can override the default cluster for each service.  CLI overrides all of these settings.
