pass 1: upgrade with cli-template tool

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-/ufo/output
-/ufo/docker_full_image_name.txt
-/spec/fixtures/hi
-/spec/fixtures/home
-/pkg
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+_yardoc
+coverage
+doc/
+InstalledFiles
+lib/bundler/man
+pkg
+pkg
+rdoc
+spec/fixtures/hi
+spec/fixtures/home
+spec/reports
+test/tmp
+test/version_tmp
+tmp
