--- a/lib/ufo/default/settings.yml
+++ b/lib/ufo/default/settings.yml
@@ -1,25 +1,23 @@
 # More info: http://ufoships.com/docs/ufo-settings/
-#
-# image:
-# clean_keep: 30
-# ecr_keep: 30
+base: &base
+  image:
+  clean_keep: 30
+  ecr_keep: 30
+  # defaults when an new ECS service is created by ufo ship
+  new_service:
+    maximum_percent: 200
+    minimum_healthy_percent: 100
+    desired_count: 1
 
-# aws_profile_ufo_env_map:
-#   default: prod
-#   # More examples:
-#   aws_profile1: prod
-#   aws_profile2: stag
-#   aws_profile3: dev
+development:
+  <<: *base
+  cluster: dev
+  profiles:
+    - aws_dev_profile1
+    - aws_dev_profile2
 
-# ufo_env_cluster_map:
-#   default: prod
-#   # More examples:
-#   aws_profile1: prod
-#   aws_profile2: stag
-#   aws_profile3: dev
-
-# defaults when an new ECS service is created by ufo ship
-new_service:
-  maximum_percent: 200
-  minimum_healthy_percent: 100
-  desired_count: 1
+production:
+  <<: *base
+  cluster: prod
+  profiles:
+    - aws_prod_profile
