--- a/lib/ufo/default/settings.yml
+++ b/lib/ufo/default/settings.yml
@@ -1,8 +1,11 @@
 # More info: http://ufoships.com/docs/ufo-settings/
-base: &base
-  image:
-  clean_keep: 30
-  ecr_keep: 30
+# The base config is treated special. It gets included the other environments automatically.
+# Yaml also directly supports merging with & and <<* syntax but doing it automatically
+# for a cleaner syntax.
+base:
+  # image:
+  # clean_keep: 30
+  # ecr_keep: 30
   # defaults when an new ECS service is created by ufo ship
   new_service:
     maximum_percent: 200
@@ -10,14 +13,12 @@ base: &base
     desired_count: 1
 
 development:
-  <<: *base
   cluster: dev
   profiles:
     - aws_dev_profile1
     - aws_dev_profile2
 
 production:
-  <<: *base
   cluster: prod
   profiles:
     - aws_prod_profile
