--- a/lib/ufo/default/settings.yml
+++ b/lib/ufo/default/settings.yml
@@ -14,6 +14,9 @@ base:
 
 development:
   cluster: dev
+  # When you have AWS_PROFILE set to one of these values, ufo will switch to the desired
+  # environment. This prevents you from switching AWS_PROFILE, forgetting to
+  # also switch UFO_ENV, and accidentally deploying to production vs development.
   profiles:
     - aws_dev_profile1
     - aws_dev_profile2
