--- a/spec/fixtures/home_existing/.docker/config.json
+++ b/spec/fixtures/home_existing/.docker/config.json
@@ -1,6 +1,6 @@
 {
   "auths": {
-    "https://123456789.dkr.ecr.us-east-1.amazonaws.com": {
+    "123456789.dkr.ecr.us-east-1.amazonaws.com": {
       "auth": "crazylongawsecrtoken"
     },
     "https://index.docker.io/v1/": {
