--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -61,6 +61,9 @@ collections:
   docs:
     name: "Documentation"
     output: true
+  reference:
+    name: "Reference"
+    output: true
 
 defaults:
   - values:
