add commit_docs.sh script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,12 +42,25 @@ jobs:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile" }}
 
+      # specs need git configured ad commit_docs.sh required it also
+      - run:
+          name: configure git
+          command: |
+            git config --global user.email "tongueroo@gmail.com"
+            git config --global user.name "Tung Nguyen"
+
       # run tests!
       - run:
           name: run tests
           command: |
             mkdir /tmp/test-results
             bundle exec rspec
+
+      - run:
+          name: commit cli reference docs
+          command: |
+            chmod a+x -R .circleci/bin
+            .circleci/bin/commit_docs.sh
 
       # collect reports
       - store_test_results:
