--- a/lib/cfn/stack.yml
+++ b/lib/cfn/stack.yml
@@ -2,12 +2,13 @@
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html
 Parameters:
-  # ElbSecurityGroups:
-  #   Description: Existing elb security group ids
-  #   Type: List<AWS::EC2::SecurityGroup::Id>
   # ECSSecurityGroups:
   #   Description: Existig ecs security group ids
   #   Type: List<AWS::EC2::SecurityGroup::Id>
+  ElbSecurityGroups:
+    Description: Existing elb security group ids
+    Type: List<AWS::EC2::SecurityGroup::Id>
+    Default: sg-32a30579
   Subnets:
     Description: Existing subnet ids
     Type: List<AWS::EC2::Subnet::Id>
@@ -50,8 +51,7 @@ Resources:
       #   Value: "hi-web"
       # - Key: access_logs.s3.bucket
       #   Value: "my-bucket"
-      SecurityGroups: # optional thanks to the automatically created security
-      - sg-32a30579 # test-elb
+      SecurityGroups: !Ref ElbSecurityGroups
       Tags:
       - Key: Name
         Value: <%= @stack_name %>-<%= (rand.round(2) * 100).to_i.to_s %>
